--- a/alx_backend_security/pyproject.toml
+++ b/alx_backend_security/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "djangorestframework>=3.16.0",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
+    "redis>=6.2.0",
+    "requests>=2.32.4",
 ]
 
 [dependency-groups]
