--- a/alx_backend_security/pyproject.toml
+++ b/alx_backend_security/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django>=5.2.4",
     "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
+    "django-ratelimit>=4.1.0",
     "djangorestframework>=3.16.0",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
