--- a/alx_backend_security/pyproject.toml
+++ b/alx_backend_security/pyproject.toml
@@ -6,11 +6,16 @@ readme = "README.md"
 requires-python = ">=3.13"
 
 dependencies = [
+    "celery>=5.5.3",
+    "colorlog>=6.9.0",
     "django>=5.2.4",
+    "django-celery-beat>=2.8.1",
+    "django-celery-results>=2.6.0",
     "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
     "django-ratelimit>=4.1.0",
     "djangorestframework>=3.16.0",
+    "flower>=2.0.1",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
     "redis>=6.2.0",
